--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -39,3 +39,10 @@
     margin-right: auto;
     margin-left: auto;
 }
+
+@mixin row-cols($count) {
+    & > * {
+      flex: 0 0 100% / $count;
+      max-width: 100% / $count;
+    }
+  }
